tests/snapshots/snapshot_tests__array2dim_init_j.snap
---
source: tests/snapshot_tests.rs
expression: run_benchmark(& path)
---
BenchmarkResult {
    example_name: "examples/two_dimensional_array/array2dim_init_j.vmt",
    status: Good,
    used_instantiations: [],
}
