tests/snapshots/snapshot_tests__array2dim_rec1.snap
---
source: tests/snapshot_tests.rs
expression: run_benchmark(& path)
---
BenchmarkResult {
    example_name: "examples/two_dimensional_array/array2dim_rec1.vmt",
    status: Good,
    used_instantiations: [],
}
