tests/snapshots/snapshot_tests__array_copy_inverse.snap
---
source: tests/snapshot_tests.rs
expression: run_benchmark(& path)
---
BenchmarkResult {
    example_name: "examples/array/array_copy_inverse.vmt",
    status: Good,
    used_instantiations: [
        "(= (Read_Int_Int (Write_Int_Int b+0 i+0 (Read_Int_Int a+0 (- n+0 i+1))) i+0) (Read_Int_Int a+0 (- n+0 i+1)))",
        "(=> (not (= (- (- n+1 Z) 1) i+0)) (= (Read_Int_Int (Write_Int_Int b+0 i+0 (Read_Int_Int a+0 (- n+0 i+1))) (- (- n+1 Z) 1)) (Read_Int_Int b+0 (- (- n+1 Z) 1))))",
        "(=> (not (= 0 i+0)) (= (Read_Int_Int (Write_Int_Int b+0 i+0 (Read_Int_Int a+0 (- n+0 i+1))) 0) (Read_Int_Int b+0 0)))",
        "(=> (not (= 1 i+0)) (= (Read_Int_Int (Write_Int_Int b+0 i+0 (Read_Int_Int a+0 (- n+0 i+1))) 1) (Read_Int_Int b+0 1)))",
        "(=> (not (= Z i+0)) (= (Read_Int_Int (Write_Int_Int b+0 i+0 (Read_Int_Int a+0 (- n+0 i+1))) Z) (Read_Int_Int b+0 Z)))",
        "(=> (not (= i+0 i+1)) (= (Read_Int_Int (Write_Int_Int b+1 i+1 (Read_Int_Int a+1 (- n+1 i+2))) i+0) (Read_Int_Int b+1 i+0)))",
    ],
}
